Fixed alignment issue for about section on user profile

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -193,4 +193,11 @@
     .search {
         text-align: right;
     }
+
+    .about-markdown {
+        > div :first-child {
+            margin-top: 0;
+            padding-top: 0;
+        }
+    }
 }
